; ModuleID = '/home/carl/AnghaBench/linux/arch/um/os-Linux/drivers/extr_tuntap_user.c_tuntap_user_init.c'
source_filename = "/home/carl/AnghaBench/linux/arch/um/os-Linux/drivers/extr_tuntap_user.c_tuntap_user_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tuntap_data = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @tuntap_user_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tuntap_user_init(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.tuntap_data*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.tuntap_data*
  store %struct.tuntap_data* %7, %struct.tuntap_data** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load %struct.tuntap_data*, %struct.tuntap_data** %5, align 8
  %10 = getelementptr inbounds %struct.tuntap_data, %struct.tuntap_data* %9, i32 0, i32 0
  store i8* %8, i8** %10, align 8
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
